[package]
name = "safe_transmute_2" 
version = "0.1.0" # remember to change html_root_url
authors = ["IronThread"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "A safe-guarded transmute which aims for a good,short and extensible API."
repository = "https://github.com/NonNullableName/safe_transmute_2"
keywords = ["safe","memory","transmute","low-level"]
categories = ["no-std"]

[dependencies]